// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Returns relevant events in right order 1`] = `
{
  "assignedTo": "[sanitized]",
  "createdAt": "[sanitized]",
  "createdAtLocation": "[sanitized]",
  "createdBy": "[sanitized]",
  "createdBySignature": "/random-bucket/f47b27b0-23bd-415f-b7ab-d6fd15534b09.png",
  "dateOfEvent": "[sanitized]",
  "declaration": {
    "applicant.address": {
      "addressType": "DOMESTIC",
      "country": "FAR",
      "district": "5ef450bc-712d-48ad-93f3-8da0fa453baa",
      "number": "55",
      "province": "a45b982a-5c7b-4bd9-8fd8-a42d0994054c",
      "residentialArea": "Example Residential Area",
      "street": "Example Street",
      "town": "Example Town",
      "urbanOrRural": "URBAN",
      "zipCode": "123456",
    },
    "applicant.age": 19,
    "applicant.dobUnknown": true,
    "applicant.email": "test@opencrvs.org",
    "applicant.image": {
      "filename": "4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
      "originalFilename": "abcd.png",
      "type": "image/png",
    },
    "applicant.name": {
      "firstname": "Chris",
      "surname": "Sarthua",
    },
    "recommender.none": true,
  },
  "flags": [],
  "id": "[sanitized]",
  "legalStatuses": {
    "DECLARED": {
      "acceptedAt": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/f47b27b0-23bd-415f-b7ab-d6fd15534b09.png",
    },
  },
  "status": "DECLARED",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
  "updatedAtLocation": "[sanitized]",
  "updatedBy": "[sanitized]",
  "updatedByUserRole": "REGISTRATION_AGENT",
}
`;

exports[`Returns relevant events in right order 2`] = `
{
  "assignedTo": "[sanitized]",
  "createdAt": "[sanitized]",
  "createdAtLocation": "[sanitized]",
  "createdBy": "[sanitized]",
  "createdBySignature": "/random-bucket/f47b27b0-23bd-415f-b7ab-d6fd15534b09.png",
  "dateOfEvent": "[sanitized]",
  "declaration": {
    "applicant.address": {
      "addressType": "DOMESTIC",
      "country": "FAR",
      "district": "5ef450bc-712d-48ad-93f3-8da0fa453baa",
      "number": "55",
      "province": "a45b982a-5c7b-4bd9-8fd8-a42d0994054c",
      "residentialArea": "Example Residential Area",
      "street": "Example Street",
      "town": "Example Town",
      "urbanOrRural": "URBAN",
      "zipCode": "123456",
    },
    "applicant.age": 19,
    "applicant.dobUnknown": true,
    "applicant.email": "test@opencrvs.org",
    "applicant.image": {
      "filename": "4f095fc4-4312-4de2-aa38-86dcc0f71044.png",
      "originalFilename": "abcd.png",
      "type": "image/png",
    },
    "applicant.name": {
      "firstname": "John",
      "surname": "Brown",
    },
    "recommender.none": true,
  },
  "flags": [],
  "id": "[sanitized]",
  "legalStatuses": {
    "DECLARED": {
      "acceptedAt": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/f47b27b0-23bd-415f-b7ab-d6fd15534b09.png",
    },
    "REGISTERED": {
      "acceptedAt": "[sanitized]",
      "createdAt": "[sanitized]",
      "createdAtLocation": "[sanitized]",
      "createdBy": "[sanitized]",
      "createdByRole": "REGISTRATION_AGENT",
      "createdBySignature": "/random-bucket/f47b27b0-23bd-415f-b7ab-d6fd15534b09.png",
      "registrationNumber": "1234567890AB",
    },
  },
  "status": "REGISTERED",
  "trackingId": "[sanitized]",
  "type": "tennis-club-membership",
  "updatedAt": "[sanitized]",
  "updatedAtLocation": "[sanitized]",
  "updatedBy": "[sanitized]",
  "updatedByUserRole": "REGISTRATION_AGENT",
}
`;

exports[`Returns relevant events in right order 3`] = `
[
  "VALIDATED",
  "DECLARED",
  "REJECTED",
  "CREATED",
  "ARCHIVED",
  "REGISTERED",
  "CERTIFIED",
]
`;
